--- a/ChooseHTML/NorseC.html
+++ b/ChooseHTML/NorseC.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>เลือกเทพเจ้านอร์ส</title>
     <link rel="stylesheet" href="choose.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -28,7 +28,7 @@
 
     <div class="">
         <div class ="indexpic">
-            <a href="../indextest.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
+            <a href="../index.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
         </div>
         <section class="top" id="top">
             <div class="home">
@@ -36,24 +36,24 @@
                         <div class="logo">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/ns1.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/ns2.png"></td>
+                                    <td><a href="../NorseHTML/odin.html"><img class = "logopic"src="../Full-Design/ns1.png"></a></td>
+                                    <td><a href="../NorseHTML/frey.html"><img class = "logopic"src="../Full-Design/ns2.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/ns3.png"></td>
+                                        <td><a href="../NorseHTML/freya.html"><img class = "logopic"src="../Full-Design/ns3.png"></a></td>
                                         <td><a href="../NorseHTML/frigg.html"><img class = "logopic"src="../Full-Design/ns4.png"></a></td>
                                     </tr>
                                     <tr>
-                                            <td><img class = "logopic"src="../Full-Design/ns5.png"></td>
-                                            <td><img class = "logopic"src="../Full-Design/ns6.png"></td>
+                                            <td><a href="../NorseHTML/baldr.html"><img class = "logopic"src="../Full-Design/ns5.png"></a></td>
+                                            <td><a href="../NorseHTML/loki.html"><img class = "logopic"src="../Full-Design/ns6.png"></a></td>
                                         </tr>
                             </table>
                         </div>
                         <div class="logo2">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/ns7.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/ns8.png"></td>
+                                    <td><a href="../NorseHTML/thor.html"><img class = "logopic"src="../Full-Design/ns7.png"></a></td>
+                                    <td><a href="../NorseHTML/tyr.html"><img class = "logopic"src="../Full-Design/ns8.png"></a></td>
                                 </tr>
                             </table>
                         </div>
