--- a/ChooseHTML/egyptC.html
+++ b/ChooseHTML/egyptC.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>เลือกเทพเจ้าอียิปต์</title>
     <link rel="stylesheet" href="choose.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -28,7 +28,7 @@
 
     <div class="">
         <div class ="indexpic">
-            <a href="../indextest.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
+            <a href="../index.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
         </div>
         <section class="top" id="top">
             <div class="home">
@@ -37,26 +37,26 @@
                             <table>
                                 <tr>
                                     <td><a href="../EgyptHTML/ra.html"><img class = "logopic"src="../Full-Design/s1.png"></a></td>
-                                    <td><img class = "logopic"src="../Full-Design/s2.png"></td>
+                                    <td><a href="../EgyptHTML/Osiris.html"><img class = "logopic"src="../Full-Design/s2.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/s3.png"></td>
-                                        <td><img class = "logopic"src="../Full-Design/s4.png"></td>
+                                        <td><a href="../EgyptHTML/Anubis.html"><img class = "logopic"src="../Full-Design/s3.png"></a></td>
+                                        <td><a href="../EgyptHTML/thoth.html"><img class = "logopic"src="../Full-Design/s4.png"></a></td>
                                     </tr>
                                     <tr>
-                                            <td><img class = "logopic"src="../Full-Design/s5.png"></td>
-                                            <td><img class = "logopic"src="../Full-Design/s6.png"></td>
+                                            <td><a href="../EgyptHTML/hathor.html"><img class = "logopic"src="../Full-Design/s5.png"></a></td>
+                                            <td><a href="../EgyptHTML/Amun.html"><img class = "logopic"src="../Full-Design/s6.png"></a></td>
                                         </tr>
                             </table>
                         </div>
                         <div class="logo2">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/s7.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/s8.png"></td>
+                                    <td><a href="../EgyptHTML/Horus.html"><img class = "logopic"src="../Full-Design/s7.png"></a></td>
+                                    <td><a href="../EgyptHTML/Bastet.html"><img class = "logopic"src="../Full-Design/s8.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/s9.png"></td>
+                                        <td><a href="../EgyptHTML/seth.html"><img class = "logopic"src="../Full-Design/s9.png"></a></td>
                                     </tr>
                             </table>
                         </div>
