--- a/ChooseHTML/greekC.html
+++ b/ChooseHTML/greekC.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>เลือกเทพเจ้ากรีก</title>
     <link rel="stylesheet" href="choose.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -28,7 +28,7 @@
 
     <div class="">
         <div class ="indexpic">
-            <a href="../indextest.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
+            <a href="../index.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
         </div>
         <div class ="nextpic2">
             <a href="greekC2.html"><img class ="arrowpic"src="../Full-Design/arrowNext.png"></a>
@@ -40,32 +40,32 @@
                         <div class="logo">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/1.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/2.png"></td>
+                                    <td><a href="../GreekHTML/Nike.html"><img class = "logopic"src="../Full-Design/1.png"></a></td>
+                                    <td><a href="../GreekHTML/apollo.html"><img class = "logopic"src="../Full-Design/2.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/3.png"></td>
-                                        <td><img class = "logopic"src="../Full-Design/4.png"></td>
+                                        <td><a href="../GreekHTML/poseidon.html"><img class = "logopic"src="../Full-Design/3.png"></a></td>
+                                        <td><a href="../GreekHTML/zeus.html"><img class = "logopic"src="../Full-Design/4.png"></a></td>
                                     </tr>
                                     <tr>
-                                            <td><img class = "logopic"src="../Full-Design/5.png"></td>
-                                            <td><img class = "logopic"src="../Full-Design/6.png"></td>
+                                            <td><a href="../GreekHTML/hera.html"><img class = "logopic"src="../Full-Design/5.png"></a></td>
+                                            <td><a href="../GreekHTML/Ares.html"><img class = "logopic"src="../Full-Design/6.png"></a></td>
                                         </tr>
                             </table>
                         </div>
                         <div class="logo2">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/7.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/8.png"></td>
+                                    <td><a href="../GreekHTML/Hestia.html"><img class = "logopic"src="../Full-Design/7.png"></a></td>
+                                    <td><a href="../GreekHTML/Hades.html"><img class = "logopic"src="../Full-Design/8.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/9.png"></td>
-                                        <td><img class = "logopic"src="../Full-Design/10.png"></td>
+                                        <td><a href="../GreekHTML/athena.html"><img class = "logopic"src="../Full-Design/9.png"></a></td>
+                                        <td><a href="../GreekHTML/Aphodite.html"><img class = "logopic"src="../Full-Design/10.png"></a></td>
                                     </tr>
                                     <tr>
-                                            <td><img class = "logopic"src="../Full-Design/11.png"></td>
-                                            <td><img class = "logopic"src="../Full-Design/12.png"></td>
+                                            <td><a href="../GreekHTML/pan.html"><img class = "logopic"src="../Full-Design/11.png"></a></td>
+                                            <td><a href="../GreekHTML/hermes.html"><img class = "logopic"src="../Full-Design/12.png"></a></td>
                                         </tr>
                             </table>
                         </div>
