--- a/ChooseHTML/greekC2.html
+++ b/ChooseHTML/greekC2.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>เลือกเทพเจ้ากรีก</title>
     <link rel="stylesheet" href="choose.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -28,7 +28,7 @@
 
     <div class="">
         <div class ="indexpic">
-            <a href="../indextest.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
+            <a href="../index.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
         </div>
         <div class ="nextpic">
             <a href="greekC.html"><img class ="arrowpic"src="../Full-Design/arrowPrev.png"></a>
@@ -39,17 +39,13 @@
                         <div class="logo">
                             <table>
                                 <tr>
-                                    <td><img class = "logopic"src="../Full-Design/13.png"></td>
-                                    <td><img class = "logopic"src="../Full-Design/14.png"></td>
+                                    <td><a href="../GreekHTML/Hephaestus.html"><img class = "logopic"src="../Full-Design/13.png"></a></td>
+                                    <td><a href="../GreekHTML/Dionisus.html"><img class = "logopic"src="../Full-Design/14.png"></a></td>
                                 </tr>
                                 <tr>
-                                        <td><img class = "logopic"src="../Full-Design/15.png"></td>
-                                        <td><img class = "logopic"src="../Full-Design/16.png"></td>
+                                        <td><a href="../GreekHTML/demeter.html"><img class = "logopic"src="../Full-Design/15.png"></a></td>
+                                        <td><a href="../GreekHTML/artemis.html"><img class = "logopic"src="../Full-Design/16.png"></a></td>
                                     </tr>
-                                    <tr>
-                                            <td><img class = "logopic"src="../Full-Design/5.png"></td>
-                                            <td><img class = "logopic"src="../Full-Design/6.png"></td>
-                                        </tr>
                             </table>
                         </div>
                         </div>
