--- a/GreekHTML/athena.html
+++ b/GreekHTML/athena.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Athena</title>
     <link rel="stylesheet" href="hermes.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,6 +23,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -33,22 +34,18 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history">ประวัติ</a>
+                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics">รูปภาพ</a>
+                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../justtest.html">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../indextest.html">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-sm-0">
-                    <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
             </div>
         </nav>
         <section class="top" id="top">
