--- a/Quiz/quizEgypt.html
+++ b/Quiz/quizEgypt.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <title>คำถามทบทวนเทพเจ้าอียิปต์</title>
     <link href="https://fonts.googleapis.com/css?family=Itim&display=swap" rel="stylesheet">
     <script src="quizE.js"></script>
     <link rel="stylesheet" href="quiz3.css">
@@ -20,6 +21,10 @@
 </head>
 
 <body>
+        <div class="">
+                <div class ="indexpic">
+                    <a href="../index.html"><img src="../Full-Design/homeclick.png" class="img-fluid"></a>
+                </div>
     <div class="container">
         <div class="row row-centered pos">
             <div class="col-lg-8 col-xs-12 col-centered">
