--- a/NorseHTML/loki.html
+++ b/NorseHTML/loki.html
@@ -23,6 +23,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -33,22 +34,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history">ประวัติ</a>
+                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics">รูปภาพ</a>
+                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="indextest.html">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-sm-0">
-                    <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
             </div>
         </nav>
         <!--รูปเทพเจ้าหน้าหลัก-->
