--- a/index.html
+++ b/index.html
@@ -126,24 +126,24 @@
                                 <img src="Full-Design/God-png/new.png" alt="" class="img-fluid"id="pics"><br>
                                 <div class="color">
                                 นายธนวัฒน์ เขมวัชรเลิศ 61070074 <br>
-                                FB:<a href="https://www.facebook.com/tanawat.kemwatcharalert">Tanawat Kemwatcharalert</a><br>
-                                GitHub:<a href="https://github.com/Zimbo333">Zimbo333</a>
+                                FB : <a href="https://www.facebook.com/tanawat.kemwatcharalert">Tanawat Kemwatcharalert</a><br>
+                                GitHub : <a href="https://github.com/Zimbo333">Zimbo333</a>
                                 </div>
                             </div>
                                 <div class="col-sm-3" id="topP"align="center">
                                         <img src="Full-Design/God-png/thank.png" alt="" class="img-fluid"id="pics"><br>
                                         <div class="color">
                                         นายปฏิพล กาญจนจิตร์ 61070111 <br>
-                                FB:<a href="https://www.facebook.com/Mr.Pathiphol">Pathiphol Kanjanajit</a><br>
-                                GitHub:<a href="https://github.com/DrSTHANKs">DrSTHANKs</a> 
+                                FB : <a href="https://www.facebook.com/Mr.Pathiphol">Pathiphol Kanjanajit</a><br>
+                                GitHub : <a href="https://github.com/DrSTHANKs">DrSTHANKs</a> 
                                         </div>
                                         </div>
                                         <div class="col-sm-3" id="topP"align="center">
                                                 <img src="Full-Design/God-png/note.png" alt="" class="img-fluid"id="pics"><br>
                                                 <div class="color">
                                                 นายภัทรนันท์ เรืองชนา 61070156 <br>
-                                FB:<a href="https://www.facebook.com/happyBKBee">Note's Pattharanan</a><br>
-                                GitHub:<a href="https://github.com/PattharananZ">PattharananZ</a> 
+                                FB : <a href="https://www.facebook.com/happyBKBee">Note's Pattharanan</a><br>
+                                GitHub : <a href="https://github.com/PattharananZ">PattharananZ</a> 
                                                 </div>
                                         </div>
                     </div>
@@ -155,16 +155,16 @@
                                     <img src="Full-Design/God-png/bee.png" alt="" class="img-fluid" id="pics"><br>
                                     <div class="color">
                                     นางสาวชญานี คำเจริญ 61070030 <br>
-                                FB:<a href="https://www.facebook.com/noterot">Chayanee Khamcharoen</a><br>
-                                GitHub:<a href="https://github.com/cynbee">cynbee</a>
+                                FB : <a href="https://www.facebook.com/noterot">Chayanee Khamcharoen</a><br>
+                                GitHub : <a href="https://github.com/cynbee">cynbee</a>
                             </div>
                                     </div>
                                     <div class="col-sm-3"id="belowP"align="center">
                                             <img src="Full-Design/God-png/tong.png" alt="" class="img-fluid"id="pics"><br>
                                             <div class="color">
                                             นางสาวสร้อยพชร เมฆาลัย 61070235 <br>
-                                FB:<a href="https://www.facebook.com/baitong.43">Tong Soipachara</a><br>
-                                GitHub:<a href="https://github.com/soipachara43">soipachara43</a> 
+                                FB : <a href="https://www.facebook.com/baitong.43">Tong Soipachara</a><br>
+                                GitHub : <a href="https://github.com/soipachara43">soipachara43</a> 
                                             </div>  
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                     Asst.prof.Manop Phankokkruad, Ph.D.<br>
                     ผศ.ดร. มานพ พันธ์โคกกรวด <br>
                     <b>ช่องทางการติดต่อ Contact</b><br>
-                   FB: Manop Phakokkruad <br>
+                    <a href="https://www.facebook.com/manop.phan">FB: Manop Phakokkruad </a><br>
                     Gmail : manop@it.kmitl.ac.th</h5>
                 </div>
             </div>
