--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                                 <img src="Full-Design/God-png/note.png" alt="" class="img-fluid"id="pics"><br>
                                                 <div class="color">
                                                 นายภัทรนันท์ เรืองชนา 61070156 <br>
-                                FB : <a href="https://www.facebook.com/happyBKBee">Note's Pattharanan</a><br>
+                                FB : <a href="https://www.facebook.com/noterot">Note's Pattharanan</a><br>
                                 GitHub : <a href="https://github.com/PattharananZ">PattharananZ</a> 
                                                 </div>
                                         </div>
@@ -155,7 +155,7 @@
                                     <img src="Full-Design/God-png/bee.png" alt="" class="img-fluid" id="pics"><br>
                                     <div class="color">
                                     นางสาวชญานี คำเจริญ 61070030 <br>
-                                FB : <a href="https://www.facebook.com/noterot">Chayanee Khamcharoen</a><br>
+                                FB : <a href="https://www.facebook.com/happyBKBee">Chayanee Khamcharoen</a><br>
                                 GitHub : <a href="https://github.com/cynbee">cynbee</a>
                             </div>
                                     </div>
