--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                                 GitHub : <a href="https://github.com/cynbee">cynbee</a>
                             </div>
                                     </div>
+                                    <div class="col-sm-3" id="central" align="center">
+                                    </div>
                                     <div class="col-sm-3"id="belowP"align="center">
                                             <img src="Full-Design/God-png/tong.png" alt="" class="img-fluid"id="pics"><br>
                                             <div class="color">
